# template-axum-webapi

./: Cargo.toml  README.md
webapi/: Cargo.toml
webapi/src/: main.rs
webapi/src/handlers/: mod.rs  weatherforecast.rs
webapi/src/models/: weatherforecast.rs
