[package]
name = "webapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "openapi_extensions", "time"] }
utoipa-axum = "0.1.0-beta.2"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
