[package]
name = "webapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = "1.0.214"
tokio = { version = "1.40.1", features = ["full"] }
utoipa = { version = "5.2.0", features = ["axum_extras", "openapi_extensions", "time"] }
utoipa-axum = "0.1.2"
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
